bikes-service-api/src/main/java/com/example/bikes_service_api/utils/ErrorHandling/Errors/Exception.java
package com.example.bikes_service_api.utils.ErrorHandling.Errors;

public class Exception extends RuntimeException{
    public Exception(String message){
        super(message);
    }
}
